--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "progress-foo",
-  "version": "1.0.4",
+  "version": "1.0.0",
   "description": "Progress bar",
   "author": "b.prioux",
   "license": "MIT",
@@ -12,16 +12,15 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
-    "prebuild": "npm run test",
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "prepare": "npm run build"
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
+    "docz:serve": "docz build && docz serve"
   },
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -30,20 +29,6 @@
     "@svgr/rollup": "^4.3.2",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "cross-env": "^5.2.1",
-    "eslint": "^6.3.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-standard": "^4.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^3.4.3",
-    "react-test-renderer": "^16.9.0",
     "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -52,7 +37,11 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript2": "^0.26.0",
     "rollup-plugin-url": "^2.2.2",
-    "typescript": "3.7.5"
+    "typescript": "3.7.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "docz": "^2.3.1",
+    "@mdx-js/mdx": "^1.6.16"
   },
   "files": [
     "dist"
