--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
+    "test": "jest",
+    "prebuild" : "npm test",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
     "docz:serve": "docz build && docz serve"
@@ -24,11 +26,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "@mdx-js/mdx": "^1.6.16",
     "@svgr/rollup": "^4.3.2",
+    "@testing-library/dom": "^7.22.6",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "babel-jest": "^26.3.0",
+    "docz": "^2.3.1",
+    "jest": "^26.4.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-test-renderer": "^16.13.1",
     "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -37,13 +51,12 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript2": "^0.26.0",
     "rollup-plugin-url": "^2.2.2",
-    "typescript": "3.7.5",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "docz": "^2.3.1",
-    "@mdx-js/mdx": "^1.6.16"
+    "typescript": "3.7.5"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "jest": {
+    "modulePathIgnorePatterns": ["<rootDir>/dist/"]
+  }
 }
