--- a/example/package.json
+++ b/example/package.json
@@ -15,14 +15,15 @@
     "build": "rollup -c",
     "start": "rollup -c -w",
     "test": "jest",
-    "prebuild" : "npm test",
+    "prebuild": "npm test",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
     "docz:serve": "docz build && docz serve"
   },
-  "peerDependencies": {
+  "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -37,11 +38,10 @@
     "@testing-library/react": "^10.4.9",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/styled-components": "^5.1.2",
     "babel-jest": "^26.3.0",
     "docz": "^2.3.1",
     "jest": "^26.4.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "react-test-renderer": "^16.13.1",
     "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
@@ -57,6 +57,8 @@
     "dist"
   ],
   "jest": {
-    "modulePathIgnorePatterns": ["<rootDir>/dist/"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/"
+    ]
   }
 }
