--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,26 @@
 name: Build and Deploy
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
-  build-and-deploy:
+  deploy:
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
 
-    - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@master
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BASE_BRANCH: master
-        BRANCH: gh-pages
-        FOLDER: public 
-        BUILD_SCRIPT: npm install && npm run build && mkdir public && cp -R node_modules public && cp presentation.html public/index.html && touch public/.nojekyll
+      - name: Install and Build 🔧
+        run: |
+          npm ci
+          npm run build
+          mkdir public
+          cp -R node_modules public
+          cp presentation.html public/index.html
+          touch public/.nojekyll
+      - name: Build and Deploy 🚀     
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        with:
+            branch: gh-pages
+            folder: public
